force-app/main/default/objects/Order__c/fields/ERP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Id__c</fullName>
    <label>ERP Order ID</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
    <description>ERP order identifier returned by middleware on successful sync.</description>
</CustomField>