force-app/main/default/objects/Order__c/fields/Last_Sync_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Attempt__c</fullName>
    <label>Last Sync Attempt</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent sync attempt to middleware.</description>
</CustomField>