force-app/main/default/objects/Order__c/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <label>Sync Error</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Last sync error message returned from middleware.</description>
</CustomField>