force-app/main/default/objects/Order__c/fields/Sync_Is_Retryable__c.field-meta.xml
<CustomField>
    <fullName>Sync_Is_Retryable__c</fullName>
    <label>Sync Is Retryable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether the last sync failure is transient and eligible for automatic retry. Set by OrderSyncHandler based on HTTP response classification (5xx/timeout = true, 422 = false).</description>
</CustomField>