force-app/main/default/objects/Order__c/fields/Sync_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Sync_Job_Id__c</fullName>
    <label>Sync Job ID</label>
    <type>Text</type>
    <length>80</length>
    <description>Middleware async job ID for 202 (Accepted) responses. Used for polling.</description>
</CustomField>